--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -47,6 +47,8 @@ once_cell = "1.8.0"
 
 [dev-dependencies]
 foundry-cli-test-utils = { path = "./test-utils" }
+serde = "1.0.133"
+toml = "0.5"
 
 [features]
 default = ["sputnik-evm", "rustls"]
