chore: more testing support

--- a/cli/test-utils/Cargo.toml
+++ b/cli/test-utils/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2021"
 tempfile = "3.2.0"
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["project-util"] }
 walkdir = "2.3.2"
+once_cell = "1.9.0"
