--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,16 +32,16 @@ jobs:
             platform: linux
             target: x86_64-unknown-linux-gnu
             arch: amd64
-          # We can't compile for M1 yet
-          # See https://github.com/rust-bitcoin/rust-secp256k1/issues/283
-          # - os: macos-latest
-          #   platform: darwin
-          #   target: x86_64-apple-darwin
-          #   arch: amd64
           - os: macos-latest
             platform: darwin
-            target: aarch64-apple-darwin
-            arch: arm64
+            target: x86_64-apple-darwin
+            arch: amd64
+          # We can't compile for M1 yet
+          # See https://github.com/rust-bitcoin/rust-secp256k1/issues/283
+          #- os: macos-latest
+          #  platform: darwin
+          #  target: aarch64-apple-darwin
+          #  arch: arm64
           - os: windows-latest
             platform: win32
             target: x86_64-pc-windows-msvc
