Nightly is a pre-release, not a draft
Drafts are only visible to repository maintainers

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,6 +122,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.TAG_NAME }}
-          draft: ${{ env.IS_NIGHTLY }}
+          prerelease: ${{ env.IS_NIGHTLY }}
           body: ${{ steps.build_changelog.outputs.changelog }}
           files: ${{ steps.artifacts.outputs.file_name }}
