--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,6 @@ on:
 
 env:
   TAG_NAME: ${{ (github.event_name == 'schedule' && 'nightly') || (github.event_name == 'workflow_dispatch' && github.event.inputs.tag) || github.ref_name }}
-  IS_NIGHTLY: ${{ github.event_name != 'push' }}
 
 jobs:
   release:
@@ -91,13 +90,13 @@ jobs:
 
       - name: Build changelog
         id: build_changelog
-        if: ${{ env.IS_NIGHTLY == false }}
+        if: ${{ env.TAG_NAME != 'nightly' }}
         uses: mikepenz/release-changelog-builder-action@v2.4.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Move nightly tag
-        if: ${{ env.IS_NIGTHLY == true }}
+        if: ${{ env.TAG_NAME == 'nightly' }}
         uses: actions/github-script@v5
         with:
           script: |
@@ -123,6 +122,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.TAG_NAME }}
-          prerelease: ${{ env.IS_NIGHTLY }}
+          prerelease: ${{ env.TAG_NAME == 'nightly' }}
           body: ${{ steps.build_changelog.outputs.changelog }}
           files: ${{ steps.artifacts.outputs.file_name }}
