--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [dependencies]
 foundry-utils = { path = "./../utils" }
-
+foundry-config = { path = "../config" }
 sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true, features = ["tracing"] }
 
 evmodin = { git = "https://github.com/vorot93/evmodin",  optional = true, features = ["util"] }
