--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -48,6 +48,7 @@ once_cell = "1.9.0"
 
 [dev-dependencies]
 foundry-cli-test-utils = { path = "./test-utils" }
+pretty_assertions = "1.0.0"
 toml = "0.5"
 
 [features]
