--- a/cli/test-utils/Cargo.toml
+++ b/cli/test-utils/Cargo.toml
@@ -11,3 +11,5 @@ tempfile = "3.2.0"
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["project-util"] }
 walkdir = "2.3.2"
 once_cell = "1.9.0"
+foundry-config = { path = "../../config" }
+serde_json = "1.0.67"
