--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ debug = true
 
 # Patch ethers-rs with a local checkout
 [patch."https://github.com/gakonst/ethers-rs"]
-ethers = { path = "../ethers-rs" }
-ethers-core = { path = "../ethers-rs/ethers-core" }
-ethers-providers = { path = "../ethers-rs/ethers-providers" }
-ethers-signers = { path = "../ethers-rs/ethers-signers" }
-ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
-ethers-solc = { path = "../ethers-rs/ethers-solc" }
+ethers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/more-convenience" }
+ethers-core = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/more-convenience"}
+ethers-providers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/more-convenience" }
+ethers-signers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/more-convenience" }
+ethers-etherscan = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/more-convenience" }
+ethers-solc = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/more-convenience" }
