--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ members = [
     "utils",
     "cast",
     "forge",
+    "forge-node",
+    "forge-node-types",
     "cli",
     "cli/test-utils",
     "config",
