--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -48,6 +48,8 @@ semver = "1.0.4"
 once_cell = "1.9.0"
 walkdir = "2.3.2"
 solang-parser = { git = "https://github.com/hyperledger-labs/solang" }
+similar = { version = "2.1.0", features = ["inline"] }
+console = "0.15.0"
 
 [dev-dependencies]
 foundry-cli-test-utils = { path = "./test-utils" }
