--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,19 +27,8 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            try {
-              await github.rest.git.updateRef({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                ref: 'tags/nightly',
-                sha: context.sha,
-                force: true
-              })
-            } catch (err) {
-              console.error(`Failed to move nightly tag.`)
-              console.error(`This should only happen the first time.`)
-              console.error(err)
-            }
+            const moveTag = require('./.github/scripts/move-tag.js')
+            await moveTag({ github, context }, 'nightly')
 
       - name: Compute release name and tag
         id: release_info
@@ -176,30 +165,5 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            const { data: releases } = await github.rest.repos.listReleases({
-              owner: context.repo.owner,
-              repo: context.repo.repo
-            })
-            let nightlies = releases.filter(
-              (release) => release.tag_name.includes('nightly')
-            )
-
-            // Keep newest 3 nightlies
-            nightlies = nightlies.slice(3)
-
-            for (const nightly of nightlies) {
-              console.log(`Deleting nightly: ${nightly.tag_name}`)
-              await github.rest.repos.deleteRelease({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                release_id: nightly.id
-              })
-              console.log(`Deleting nightly tag: ${nightly.tag_name}`)
-              await github.rest.git.deleteRef({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                ref: `tags/${nightly.tag_name}`
-              })
-            }
-
-            console.log('Done.')
+            const prunePrereleases = require('./.github/scripts/prune-prereleases.js')
+            await prunePrereleases({github, context})
