--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,11 @@ codegen-units = 1
 panic = "abort"
 debug = true
 
-## Patch ethers-rs with a local checkout
-#[patch."https://github.com/gakonst/ethers-rs"]
-#ethers = { path = "../ethers-rs" }
-#ethers-core = { path = "../ethers-rs/ethers-core" }
-#ethers-providers = { path = "../ethers-rs/ethers-providers" }
-#ethers-signers = { path = "../ethers-rs/ethers-signers" }
-#ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
-#ethers-solc = { path = "../ethers-rs/ethers-solc" }
+# Patch ethers-rs with a local checkout
+[patch."https://github.com/gakonst/ethers-rs"]
+ethers = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-core = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-providers = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-signers = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-etherscan = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-solc = { git = "https://github.com/brockelmore/ethers-rs" }
