--- a/.github/ISSUE_TEMPLATE/BUG-FORM.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-FORM.yml
@@ -30,6 +30,10 @@ body:
       required: true
   - type: input
     attributes:
+      label: What version of Foundry are you on?
+      placeholder: "Run forge --version and paste the output here"
+  - type: input
+    attributes:
       label: What command(s) is the bug in?
       description: Leave empty if not relevant
       placeholder: "For example: forge test"
