Use `ETH_RPC_URL` for integration tests
If we use `FOUNDRY_ETH_RPC_URL` then it poisons the environment
for other integration tests that deal with config.

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -11,7 +11,7 @@ jobs:
     name: Tests (Stable)
     runs-on: ubuntu-latest
     env:
-      FOUNDRY_ETH_RPC_URL: https://eth-mainnet.alchemyapi.io/v2/Lc7oIGYeL_QvInzI0Wiu_pOZZDEKBrdf
+      ETH_RPC_URL: https://eth-mainnet.alchemyapi.io/v2/Lc7oIGYeL_QvInzI0Wiu_pOZZDEKBrdf
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
