cast: implement ls and accounts
Implement `cast ls` and `cast accounts`

`cast ls` prints out a list of accounts and their balances.
`cast accounts` prints out a lits of accounts and their type
of account.

These are based on `seth`. The `seth` implementation
is based on `ethsign`, see:

- https://github.com/dapphub/dapptools/blob/1be7d796a468f52a5eb5b6830591d76a3b4b1c49/src/seth/libexec/seth/seth-accounts#L4
- https://github.com/dapphub/dapptools/blob/1be7d796a468f52a5eb5b6830591d76a3b4b1c49/src/ethsign/ethsign.go#L210

--- a/cast/Cargo.toml
+++ b/cast/Cargo.toml
@@ -8,13 +8,14 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 foundry-utils = { path = "../utils" }
-futures = "0.3.17"
+futures = "0.3.19"
 ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-signers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 eyre = "0.6.5"
 rustc-hex = "2.1.0"
+serde = "1.0.132"
 serde_json = "1.0.67"
 chrono = "0.2"
 hex = "0.4.3"
