--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -12,10 +12,12 @@ ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features =
 ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+ethers-signers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"], optional = true }
 
-
+dirs-next = "2.0.0"
+coins-bip32 = "0.6.0"
 eyre = { version = "0.6.5", default-features = false }
 hex = "0.4.3"
 reqwest = { version = "0.11.8", default-features = false, features = ["json", "rustls"] }
