--- a/forge-node/Cargo.toml
+++ b/forge-node/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 axum = "0.2.8"
+chrono = "0.4.0"
 ethers = { git = "https://github.com/gakonst/ethers-rs" }
 serde_json = "1.0.67"
 tokio = { version = "1.10.1", features = ["time"] }
