--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,11 @@ debug = true
 #ethers-signers = { path = "../ethers-rs/ethers-signers" }
 #ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
 #ethers-solc = { path = "../ethers-rs/ethers-solc" }
+
+[patch."https://github.com/gakonst/ethers-rs"]
+ethers = { git = "https://github.com/mattsse/ethers-rs/", branch = "matt/add-optimizer-details" }
+ethers-core = { git = "https://github.com/mattsse/ethers-rs/", branch = "matt/add-optimizer-details" }
+ethers-providers = { git = "https://github.com/mattsse/ethers-rs/", branch = "matt/add-optimizer-details" }
+ethers-signers = { git = "https://github.com/mattsse/ethers-rs/", branch = "matt/add-optimizer-details" }
+ethers-etherscan = { git = "https://github.com/mattsse/ethers-rs/", branch = "matt/add-optimizer-details" }
+ethers-solc = { git = "https://github.com/mattsse/ethers-rs/", branch = "matt/add-optimizer-details" }
