--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,11 +72,15 @@ jobs:
           # The OS is used for the runner
           # The platform is a generic platform name
           # The target is used by Cargo
-          # The arch is either 386 or amd64
+          # The arch is either 386, arm64 or amd64
           - os: ubuntu-latest
             platform: linux
             target: x86_64-unknown-linux-gnu
             arch: amd64
+          - os: ubuntu-latest
+            platform: linux
+            target: aarch64-unknown-linux-gnu
+            arch: arm64
           - os: macos-latest
             platform: darwin
             target: x86_64-apple-darwin
