--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -31,6 +31,7 @@ comfy-table = "5.0.0"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full", "solc-tests"] }
+ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["project-util"] }
 foundry-utils = { path = "./../utils", features = ["test"] }
 
 [features]
