--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 foundry-utils = { path = "./../utils" }
 
-sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true, features = ["tracing"] }
+sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true, features = ["tracing", "with-serde"] }
 
 ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full"] }
 ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
@@ -28,6 +28,7 @@ serde_json = "1.0.72"
 serde = "1.0.130"
 ansi_term = "0.12.1"
 comfy-table = "5.0.0"
+dirs-next = "2.0.0"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full", "solc-tests"] }
