--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -157,7 +157,7 @@ jobs:
 
       - name: Build man page
         id: man
-        if: ${{ matrix.job.platform == 'linux' }}
+        if: ${{ matrix.job.target == 'x86_64-unknown-linux-gnu' }}
         env:
           PLATFORM_NAME: ${{ matrix.job.platform }}
           TARGET: ${{ matrix.job.target }}
