--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ debug = true
 #ethers-signers = { path = "../ethers-rs/ethers-signers" }
 #ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
 #ethers-solc = { path = "../ethers-rs/ethers-solc" }
+
+
+[patch."https://github.com/xJonathanLEI/starknet-rs"]
+starknet = { path = "../starknet-rs" }
