--- a/sand/Cargo.toml
+++ b/sand/Cargo.toml
@@ -10,4 +10,12 @@ starknet tooling for foundry
 starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
 thiserror = "1.0.30"
 tracing = "0.1.30"
-ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+serde_json = "1.0.68"
+serde = { version = "1.0.130", features = ["derive"] }
+semver = { version = "1.0.5", features = ["serde"] }
+walkdir = "2.3.2"
+rayon = "1.5.1"
+dunce = "1.0.2"
+
+[dev-dependencies]
+tempfile = "3.3.0"
