--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -26,8 +26,8 @@ foundry-utils = { path = "../utils" }
 forge = { path = "../forge" }
 foundry-config = { path = "../config" }
 cast = { path = "../cast" }
-evm-adapters = { path = "../evm-adapters" }
-ui = { path = "../ui" }
+# TODO: Re-enable when ported
+#ui = { path = "../ui" }
 dunce = "1.0.2"
 # ethers = "0.5"
 ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
@@ -45,9 +45,6 @@ hex = "0.4.3"
 rayon = "1.5.1"
 serde = "1.0.133"
 
-## EVM Implementations
-# evm = { version = "0.30.1" }
-sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm", optional = true }
 proptest = "1.0.0"
 glob = "0.3.0"
 semver = "1.0.4"
@@ -65,16 +62,10 @@ pretty_assertions = "1.0.0"
 toml = "0.5"
 
 [features]
-default = ["sputnik-evm", "rustls"]
+default = ["rustls"]
 solc-asm = ["ethers/solc-sha2-asm"]
 rustls = ["ethers/rustls"]
 openssl = ["ethers/openssl"]
-
-sputnik-evm = [
-    "sputnik",
-    "evm-adapters/sputnik",
-    "evm-adapters/sputnik-helpers",
-]
 
 integration-tests = []
 
