--- a/forge/Cargo.toml
+++ b/forge/Cargo.toml
@@ -23,8 +23,10 @@ proptest = "1.0.0"
 rayon = "1.5"
 rlp = "0.5.1"
 
-# load sputnik for parallel evm usage
-sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm" }
+bytes = "1.1.0"
+thiserror = "1.0.29"
+revm = { package = "revm", git = "https://github.com/onbjerg/revm", branch = "onbjerg/filth-export" }
+hashbrown = "0.12"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full", "solc-tests"] }
