--- a/forge/Cargo.toml
+++ b/forge/Cargo.toml
@@ -27,6 +27,7 @@ bytes = "1.1.0"
 thiserror = "1.0.29"
 revm = { package = "revm", git = "https://github.com/onbjerg/revm", branch = "onbjerg/machine-exports" }
 hashbrown = "0.12"
+once_cell = "1.9.0"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full", "solc-tests"] }
