forge install: solmate

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "foundry_seminar2/lib/ds-test"]
 	path = foundry_seminar2/lib/ds-test
 	url = https://github.com/dapphub/ds-test
+[submodule "foundry_seminar2/lib/solmate"]
+	path = foundry_seminar2/lib/solmate
+	url = https://github.com/Rari-Capital/solmate
