--- a/cast/Cargo.toml
+++ b/cast/Cargo.toml
@@ -13,6 +13,7 @@ ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", default-featu
 ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-signers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+async-trait = "0.1.52"
 eyre = "0.6.5"
 rustc-hex = "2.1.0"
 serde_json = "1.0.67"
