fix: implement stream trait, error: implement deref

--- a/cast/Cargo.toml
+++ b/cast/Cargo.toml
@@ -22,6 +22,7 @@ hex = "0.4.3"
 async-stream = "0.3"
 futures-core = "0.3"
 futures-util = "0.3"
+serde = "1.0.133"
 
 [features]
 default = ["ledger", "trezor"]
