feat: flesh out node crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ members = [
     "utils",
     "cast",
     "forge",
-    "forge-node",
-    "forge-node-types",
+    "node",
+    "node/node-core",
     "cli",
     "cli/test-utils",
     "config",
