--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -24,7 +24,7 @@ clap_complete = "3.0.4"
 forge-fmt = { path = "../fmt" }
 foundry-utils = { path = "../utils" }
 forge = { path = "../forge" }
-forge-node = { path = "../forge-node" }
+forge-node = { path = "../node" }
 cast = { path = "../cast" }
 ui = { path = "../ui" }
 dunce = "1.0.2"
