--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "forge-node"
+name = "foundry-node"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 # foundry internal
 foundry-evm = { path = "../evm" }
-forge-node-core = { path = "node-core" }
+foundry-node-core = { path = "node-core" }
 foundry-utils = { path = "../utils" }
 
 # evm support
