refactor: tracing decoding

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -36,5 +36,5 @@ thiserror = "1.0.30"
 async-trait = "0.1.53"
 
 [dev-dependencies]
-ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
+ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen", "legacy"] }
 tokio = { version = "1.10", features = ["full"] }
