rename to anvil

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ members = [
     "utils",
     "cast",
     "forge",
-    "node",
-    "node/node-core",
+    "anvil",
+    "anvil/anvil-core",
     "cli",
     "cli/test-utils",
     "config",
