refactor: move to separate rpc crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "forge",
     "anvil",
     "anvil/anvil-core",
+    "anvil/anvil-rpc",
     "cli",
     "cli/test-utils",
     "config",
