feat: refactor anvil server crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "anvil",
     "anvil/anvil-core",
     "anvil/anvil-rpc",
+    "anvil/anvil-server",
     "cast",
     "binder",
     "cli",
