--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 members = [
     "anvil",
-    "anvil/anvil-core",
-    "anvil/anvil-rpc",
-    "anvil/anvil-server",
+    "anvil/core",
+    "anvil/rpc",
+    "anvil/server",
     "cast",
     "binder",
     "cli",
