--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -23,9 +23,9 @@ vergen = { version = "6.0.0", default-features = false, features = [
 [dependencies]
 # foundry internal
 foundry-evm = { path = "../evm" }
-anvil-core = { path = "anvil-core" }
-anvil-rpc = { path = "anvil-rpc" }
-anvil-server = { path = "anvil-server" }
+anvil-core = { path = "core" }
+anvil-rpc = { path = "rpc" }
+anvil-server = { path = "server" }
 foundry-utils = { path = "../utils" }
 foundry-common = { path = "../common", optional = true }
 forge = { path = "../forge", optional = true }
