feat: add ctrlc handler

--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -65,6 +65,7 @@ clap = { version = "3.0.10", features = [
 async-trait = "0.1.53"
 chrono = "0.4.19"
 auto_impl = "0.5.0"
+ctrlc = { version = "3", optional = true }
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
@@ -73,5 +74,5 @@ tokio = { version = "1.10", features = ["full"] }
 
 [features]
 default = ["cli"]
-cmd = ["clap", "foundry-common", "forge"]
+cmd = ["foundry-common", "forge", "clap", "ctrlc"]
 cli = ["tokio/full", "cmd"]
