Implement some of the Revive RPCs (#317)
* [revive]: Implement important RPCs

Signed-off-by: Alexandru Cihodaru <alexandru.cihodaru@parity.io>
Co-authored-by: alindima <alin@parity.io>

--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -132,6 +132,7 @@ parity-scale-codec = "3.7.5"
 subxt = "0.43.0"
 subxt-signer = "0.43.0"
 tokio-stream = "0.1.17"
+sqlx = "0.8.6"
 
 [dev-dependencies]
 alloy-provider = { workspace = true, features = ["txpool-api"] }
