fix: inline config locations

--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -53,6 +53,7 @@ clap = { version = "4", features = ["derive"] }
 path-slash = "0.2"
 
 [dev-dependencies]
+snapbox.workspace = true
 similar-asserts.workspace = true
 figment = { workspace = true, features = ["test"] }
 tempfile.workspace = true
